--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "lodash.merge": "4.3.5",
     "normalizr": "2.0.1",
     "pick-to-array": "1.0.0",
-    "react": "15.0.1",
-    "react-dom": "15.0.1",
-    "react-redux": "5.0.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "redux-saga": "0.13.0",
     "wpapi": "0.11.0"
   },
@@ -67,7 +68,6 @@
     "jest": "18.1.0",
     "jest-cli": "17.0.3",
     "lerna": "2.0.0-beta.31",
-    "react-addons-test-utils": "15.3.0",
     "redux": "3.4.0",
     "rimraf": "2.5.2",
     "snazzy": "5.0.0",
